[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/FleetListUI.gd" type="Script" id=1]
[ext_resource path="res://UI/ShipLabelUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/ShipInfoRT.gd" type="Script" id=3]

[sub_resource type="NoiseTexture" id=1]

[node name="FleetListUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.05264
margin_bottom = -1.05261
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fleet" type="VBoxContainer" parent="."]
anchor_left = 0.293945
anchor_top = 0.0966667
anchor_right = 0.732422
anchor_bottom = 0.87
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Name" type="LineEdit" parent="Fleet"]
margin_right = 449.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Fleet"]
margin_top = 26.0
margin_right = 449.0
margin_bottom = 441.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ShipList" type="VBoxContainer" parent="Fleet/ScrollContainer"]
margin_right = 437.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShipLabelUI" parent="Fleet/ScrollContainer/ShipList" instance=ExtResource( 2 )]
margin_right = 437.0
margin_bottom = 128.0

[node name="ShipLabelUI2" parent="Fleet/ScrollContainer/ShipList" instance=ExtResource( 2 )]
margin_top = 132.0
margin_right = 437.0
margin_bottom = 260.0

[node name="ShipLabelUI3" parent="Fleet/ScrollContainer/ShipList" instance=ExtResource( 2 )]
margin_top = 264.0
margin_right = 437.0
margin_bottom = 392.0

[node name="ShipLabelUI4" parent="Fleet/ScrollContainer/ShipList" instance=ExtResource( 2 )]
margin_top = 396.0
margin_right = 437.0
margin_bottom = 524.0

[node name="rmv" type="Button" parent="Fleet"]
margin_left = 214.0
margin_top = 445.0
margin_right = 234.0
margin_bottom = 463.0
size_flags_horizontal = 4
text = "-"

[node name="FleetList" type="VBoxContainer" parent="."]
anchor_left = 0.753906
anchor_top = 0.12
anchor_right = 0.962891
anchor_bottom = 0.858333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="FleetList"]
margin_right = 214.0
margin_bottom = 12.0
text = "Fleet"
align = 1
valign = 1

[node name="FleetList" type="ItemList" parent="FleetList"]
margin_top = 16.0
margin_right = 214.0
margin_bottom = 420.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="menu" type="HBoxContainer" parent="FleetList"]
margin_top = 424.0
margin_right = 214.0
margin_bottom = 442.0
alignment = 2

[node name="new_fleet" type="Button" parent="FleetList/menu"]
margin_right = 105.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "+"

[node name="dissmiss_fleet" type="Button" parent="FleetList/menu"]
margin_left = 109.0
margin_right = 214.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "X"

[node name="Ships" type="VBoxContainer" parent="."]
anchor_left = 0.0400391
anchor_top = 0.145
anchor_right = 0.272461
anchor_bottom = 0.868333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ShipAbstract" type="Panel" parent="Ships"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 238.0
margin_bottom = 305.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="RichTextLabel" parent="Ships/ShipAbstract"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipList" type="ItemList" parent="Ships"]
margin_top = 309.0
margin_right = 238.0
margin_bottom = 410.0
size_flags_vertical = 3

[node name="add" type="Button" parent="Ships"]
margin_left = 109.0
margin_top = 414.0
margin_right = 129.0
margin_bottom = 432.0
size_flags_horizontal = 4
text = "+"

[node name="Menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -143.5
margin_top = -49.4915
margin_right = 143.5
margin_bottom = -31.4915
size_flags_horizontal = 4
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="Menu"]
margin_right = 141.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "Launch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="Menu"]
margin_left = 145.0
margin_right = 287.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="Fleet/Name" to="." method="_on_Name_text_changed"]
[connection signal="pressed" from="Fleet/rmv" to="." method="_on_rmv_pressed"]
[connection signal="item_selected" from="FleetList/FleetList" to="." method="_on_FleetList_item_selected"]
[connection signal="pressed" from="FleetList/menu/new_fleet" to="." method="_on_new_fleet_pressed"]
[connection signal="pressed" from="FleetList/menu/dissmiss_fleet" to="." method="_on_dissmiss_fleet_pressed"]
[connection signal="item_activated" from="Ships/ShipList" to="." method="_on_ShipList_item_activated"]
[connection signal="item_selected" from="Ships/ShipList" to="." method="_on_ShipList_item_selected"]
[connection signal="pressed" from="Ships/add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="Menu/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="Menu/Cancel" to="." method="_on_Cancel_pressed"]
